--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Andrew Klein Reference Hub
 site_description: Andrew Kleins website
 site_author: Andrew Klein
-site_url: https://<andrewjordank.github.io>/
+site_url: https://<github-andrewjordank.github.io>/
 
 # Repository
 repo_name: Foss_Reference_Hub
