--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: Andrew Klein Reference Hub
 site_description: Andrew Kleins website
 site_author: Andrew Klein
-site_url: https://<github-andrewjordank.github.io>/
+site_url: https://github-andrewjordank.github.io/
 
 # Repository
 repo_name: Foss_Reference_Hub
@@ -14,7 +14,7 @@ copyright: 'Copyright &copy; 2023 - 2024 Andrew Klein'
 # Configuration
 theme:
   name: material
-  highlightjs: true
+  highlightts: true
   font:
     text: Roboto
     code: Regular
