--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,10 +49,16 @@ theme:
 # Page tree
 nav:
   - Home: index.md
+  - About Me: 
+      Personal Info: personal.md
+      Resume: resume.md
   - Codebase: 
       Installation and Requirements: installation.md
       User Manual: manual.md
   - Data Managemen Plan: Data_Management_Plan.md
+  - Current Projects:
+      HIT: hit_project.md
+      ABO: abo_project.md
 
 # Theme Extras
 extra_css:
