--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,7 +51,7 @@ nav:
   - Home: index.md
   - About Me: 
       Personal Info: personal.md
-      Resume: Andrew_Klein_CV(1).docx
+      Resume: Andrew Klein_CV (1).pdf
   - Codebase: 
       Installation and Requirements: installation.md
       User Manual: manual.md
