--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,8 +4,8 @@ site_author: Andrew Klein
 site_url: https://github-andrewjordank.github.io/
 
 # Repository
-repo_name: Foss_Reference_Hub
-repo_url: https://github.com/andrewjordank/Foss_Reference_Hub
+repo_name: Andrew_Klein_Website
+repo_url: https://github.com/andrewjordank/Andrew_Klein_Website
 edit_uri: edit/main/docs/
 # Copyright
 copyright: 'Copyright &copy; 2023 - 2024 Andrew Klein'
