--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,8 +55,8 @@ nav:
   - Codebase: 
       Installation and Requirements: installation.md
       User Manual: manual.md
-  - Data Managemen Plan: Data_Management_Plan.md
-  - Current Projects:
+  - Data Management Plan: Data_Management_Plan.md
+  - Current Projects: intro.md
       HIT: hit_project.md
       ABO: abo_project.md
 
