--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,7 +56,8 @@ nav:
       Installation and Requirements: installation.md
       User Manual: manual.md
   - Data Management Plan: Data_Management_Plan.md
-  - Current Projects: intro.md
+  - Current Projects: 
+      Intro: intro.md
       HIT: hit_project.md
       ABO: abo_project.md
 
