--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ site_url: https://github-andrewjordank.github.io/
 repo_name: Andrew_Klein_Website
 repo_url: https://github.com/andrewjordank/Andrew_Klein_Website
 edit_uri: edit/main/docs/
+edit_uri: edit/main/docs/Projects/
 # Copyright
 copyright: 'Copyright &copy; 2023 - 2024 Andrew Klein'
 
