--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,8 +57,7 @@ nav:
       Installation and Requirements: installation.md
       User Manual: manual.md
   - Data Management Plan: Data_Management_Plan.md
-  - Current Projects: 
-      Intro: intro.md
+  - Current Projects: intro.md
       HIT: hit_project.md
       ABO: abo_project.md
 
