--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Andrew Klein Reference Hub
+site_name: Andrew Klein Website
 site_description: Andrew Kleins website
 site_author: Andrew Klein
 site_url: https://github-andrewjordank.github.io/
@@ -57,7 +57,8 @@ nav:
       Installation and Requirements: installation.md
       User Manual: manual.md
   - Data Management Plan: Data_Management_Plan.md
-  - Current Projects: intro.md
+  - Current Projects: 
+    Intro: intro.md
       HIT: hit_project.md
       ABO: abo_project.md
 
