--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ site_url: https://github-andrewjordank.github.io/
 # Repository
 repo_name: Andrew_Klein_Website
 repo_url: https://github.com/andrewjordank/Andrew_Klein_Website
-edit_uri: edit/main/docs/Projects/
+edit_uri: edit/main/docs/
 
 # Copyright
 copyright: 'Copyright &copy; 2023 - 2024 Andrew Klein'
@@ -14,7 +14,7 @@ copyright: 'Copyright &copy; 2023 - 2024 Andrew Klein'
 
 # Configuration
 theme:
-  name: material
+  name: lantana
   highlightts: true
   font:
     text: Roboto
