--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,6 +53,8 @@ nav:
   - About Me: 
       Personal Info: personal.md
       Resume: Andrew Klein_CV (1).pdf
+  - Projects:
+      Introduction: intro.md
   - Codebase: 
       Installation and Requirements: installation.md
       User Manual: manual.md
