--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,23 +17,7 @@ theme:
   palette: 
     primary: amber
     accent: white
-    # Palette toggle for automatic mode
-    - media: "(prefers-color-scheme)"
-      toggle:
-        icon: material/brightness-auto
-        name: Switch to light mode
-    # Palette toggle for light mode
-    - scheme: default
-      toggle:
-        icon: material/brightness-7 
-        name: Switch to dark mode
-
-    # Palette toggle for dark mode
-    - scheme: slate
-      toggle:
-        icon: material/brightness-4
-        name: Switch to light mode
-  highlightts: true
+  highlights: true
   font:
     text: Roboto
     code: Regular
