--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,8 @@ site_url: https://github-andrewjordank.github.io/
 repo_name: Andrew_Klein_Website
 repo_url: https://github.com/andrewjordank/Andrew_Klein_Website
 edit_uri: edit/main/docs/
+                        /Projects/
+                        /Figures/
 
 # Copyright
 copyright: 'Copyright &copy; 2023 - 2024 Andrew Klein'
@@ -42,7 +44,7 @@ theme:
   language: en
   palette:
     primary: amber
-    accent: custom
+    accent: white
   icon:
     logo: material/cogs
   favicon: material/cogs
