--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,7 +57,7 @@ nav:
       Resume: Andrew Klein_CV (1).pdf
   - Projects:
       Introduction: intro.md
-      ABO Systematic Review: formulating_LD_plots-Andrew_Klein.md
+      ABO Systematic Review: docs/projects/making_LD_plot
       Heparin Induced Thrombocytopenia: filler.md
   - Codebase: 
       Installation and Requirements: requirements.txt
