--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,7 +52,7 @@ nav:
   - Home: index.md
   - About Me: 
       Personal Info: personal.md
-      Resume: Andrew Klein_CV (1).pdf
+      Resume: Andrew _Klein_CV.pdf
   - Projects:
       Introduction: intro.md
       ABO Systematic Review: formulating_LD_plots-Andrew_Klein.md
